# holon

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  Nextest.toml  proptest.toml  rustfmt.toml
assets/themes/: holon.yaml
crates/holon/: Cargo.toml
crates/holon-api/: Cargo.toml
crates/holon-api/src/: block.rs  document.rs  entity.rs  hashmap_value_conversions.rs  lib.rs  render_types.rs  streaming.rs  widget_spec.rs
crates/holon-core/: Cargo.toml
crates/holon-core/src/: block_operations_tests.rs  fractional_index.rs  lib.rs  operation_log.rs  traits.rs  undo.rs
crates/holon-filesystem/: Cargo.toml
crates/holon-filesystem/src/: directory.rs  file.rs  lib.rs
crates/holon-frontend/: Cargo.toml
crates/holon-frontend/src/: lib.rs
crates/holon-integration-tests/: Cargo.toml  doc_0.org  doc_1.org
crates/holon-integration-tests/src/: assertions.rs  lib.rs  org_utils.rs  polling.rs  test_environment.rs  widget_state.rs
crates/holon-integration-tests/tests/: bidirectional_sync.rs  cucumber.rs  general_e2e_pbt.proptest-regressions  general_e2e_pbt.rs
crates/holon-integration-tests/tests/features/: app_workflow.feature
crates/holon-macros/: Cargo.toml
crates/holon-macros-test/: Cargo.toml
crates/holon-macros-test/src/: lib.rs
crates/holon-macros/src/: attr_parser.rs  entity.rs  lib.rs  operations_trait.rs
crates/holon-macros/tests/: operations_trait_tests.rs
crates/holon-orgmode/: Cargo.toml
crates/holon-orgmode/queries/: orgmode_hierarchy.prql
crates/holon-orgmode/src/: block_diff.rs  di.rs  file_io.rs  file_utils.rs  file_watcher.rs  lib.rs  link_parser.rs  models.rs  org_renderer.rs  orgmode_adapter.rs  orgmode_event_adapter.rs  orgmode_file_writer.rs  orgmode_sync_provider.rs  parser.rs  write_tracker.rs  writer.rs
crates/holon-orgmode/tests/: round_trip_pbt.rs
crates/holon-prql-render/: Cargo.toml
crates/holon-prql-render/src/: compiler.rs  lib.rs  lineage.rs  parser.rs  types.rs
crates/holon-todoist/: Cargo.toml
crates/holon-todoist/queries/: todoist_hierarchy.prql
crates/holon-todoist/src/: api_client.rs  client.rs  di.rs  dispatch_helper.rs  fake.rs  fake_client.rs  fake_wrapper.rs  inverse_operation_test.rs  lib.rs  mod.rs  models.rs  operations_demo.rs  provider_wrapper.rs  queries.rs  stream_integration_test.rs  todoist_datasource.rs  todoist_event_adapter.rs  todoist_sync_provider.rs
crates/holon/examples/: turso_ivm_recursive_cte_join_repro.rs
crates/holon/queries/: loro_blocks_hierarchy.prql
crates/holon/src/: lib.rs  tasks.rs
crates/holon/src/api/: backend_engine.rs  loro_backend.rs  loro_backend_pbt.rs  memory_backend.rs  operation_dispatcher.rs  pbt_infrastructure.rs  repository.rs  tests.rs  types.rs
crates/holon/src/core/: datasource.rs  datasource_tests.rs  mod.rs  operation_log.rs  operation_wrapper.rs  queryable_cache.rs  sql_operation_provider.rs  stream_cache.rs  test_macro.rs  traits.rs
crates/holon/src/core/transform/: ast_builders.rs  column_preservation.rs  json_aggregation.rs  mod.rs  pipeline.rs
crates/holon/src/di/: lifecycle.rs  mod.rs  registration.rs  runtime.rs  test_helpers.rs
crates/holon/src/navigation/: mod.rs  provider.rs
crates/holon/src/storage/: backend.rs  command_sourcing.rs  mod.rs  resource.rs  schema_module.rs  schema_modules.rs  sql_parser.rs  sql_utils.rs  sync_token_store.rs  task_datasource.rs  test_helpers.rs  turso.rs  turso_ivm_bug_proptest.regressions  turso_ivm_bug_proptest.rs  turso_ivm_join_test.rs  turso_join_panic_repro.rs  turso_matview_test.rs  turso_pbt_tests.rs  turso_repro_test.rs  turso_tests.rs
crates/holon/src/sync/: cache_event_subscriber.rs  canonical_path.rs  command_log.rs  document_entity.rs  document_operations.rs  event_bus.rs  event_subscriber.rs  iroh_sync_adapter.rs  loro_block_operations.rs  loro_blocks_datasource.rs  loro_document.rs  loro_document_store.rs  loro_event_adapter.rs  loro_module.rs  mod.rs  turso_command_log.rs  turso_event_bus.rs
crates/holon/src/testing/: e2e_test_helpers.rs  generic_provider_state.rs  mod.rs
crates/holon/tests/: e2e_backend_engine_test.rs  integration_tests.rs  json_aggregation_e2e_test.rs  json_aggregation_test.rs  reliability_tests.rs  stress_tests.rs
crates/query-render/src/: lib.rs  lineage.rs  parser.rs
frontends/blinc/: Cargo.toml  build.rs
frontends/blinc/src/: cdc.rs  main.rs  operations.rs  state.rs
frontends/blinc/src/render/: context.rs  interpreter.rs  mod.rs
frontends/blinc/src/render/builders/: badge.rs  block.rs  checkbox.rs  clickable.rs  columns.rs  icon.rs  list.rs  live_query.rs  mod.rs  render_block.rs  row.rs  section.rs  spacer.rs  text.rs  tree.rs
frontends/flutter/: .pre-commit-config.yaml  DEVELOPMENT.md  DIAGNOSTIC_LOG_ANALYSIS.md  GREY_WINDOW_INVESTIGATION.md  HANDOFF_LAYOUT_ARCHITECTURE.md  HANDOFF_RENDER_BLOCK.md  INVESTIGATION.md  OTLP_INVESTIGATION.md  PIE_MENU.md  TODO_UI.md  flutter_rust_bridge.yaml  pubspec.yaml
frontends/flutter/docs/: STACK_TRACE_ANALYSIS.md
frontends/flutter/lib/: main.dart
frontends/flutter/lib/models/: layout_region.dart  navigation_state.dart
frontends/flutter/rust/: Cargo.toml
frontends/flutter/rust/src/: lib.rs
frontends/flutter/rust/src/api/: ffi_bridge.rs  flutter_pbt_backend.rs  mod.rs  pbt_proptest.rs  types.rs
frontends/flutter/scripts/: E2E_PRODUCTION_PARITY_ANALYSIS.md  analyze_init_logs.sh  capture_stack_traces.sh  compare_no_rust_backtrace.sh  reproduce_grey_window.sh  test_otlp_bypass.sh  test_otlp_network_timeout.sh
frontends/mcp/: Cargo.toml  README.md
frontends/mcp/src/: di.rs  lib.rs  main.rs  resources.rs  server.rs  telemetry.rs  tools.rs  types.rs
frontends/tui/: Cargo.toml  TODO.md
frontends/tui/src/: app_main.rs  launcher.rs  render_interpreter.rs  state.rs  tui_pbt_backend.rs  ui_element.rs
frontends/tui/src/components/: block_list.rs
frontends/tui/tests/: navigation_test.rs
frontends/waterui/: Cargo.toml  Water.toml
frontends/waterui/src/: lib.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+84 files in other folders)
