[package]
name = "rusty-knowledge-tauri"
version = "0.1.0"
edition = "2021"

[lib]
name = "rusty_knowledge_tauri"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rusty-knowledge = { path = "../crates/rusty-knowledge" }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
