[package]
name = "holon-api"
version = "0.1.0"
edition = "2021"

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
holon-macros.workspace = true
opentelemetry.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
tokio = { workspace = true, features = ["rt", "sync"] }
tokio-stream.workspace = true
async-trait.workspace = true
