[package]
name = "holon-core"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait.workspace = true
chrono.workspace = true
holon-api.workspace = true
holon-macros.workspace = true
anyhow.workspace = true
loro_fractional_index.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
