[package]
name = "holon-macros-test"
version = "0.1.0"
edition = "2021"

[lib]
name = "holon_macros_test"
path = "src/lib.rs"

[dependencies]
holon-macros.workspace = true
holon.workspace = true
holon-api.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["macros", "test-util"] }
holon-prql-render.workspace = true
