[package]
name = "holon-orgmode"
version = "0.1.0"
edition = "2021"

[features]
default = []
di = []

[dependencies]
orgize.workspace = true
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-stream.workspace = true
tracing.workspace = true
uuid.workspace = true
walkdir.workspace = true

holon.workspace = true
holon-macros.workspace = true
holon-api.workspace = true
holon-filesystem.workspace = true
ferrous-di.workspace = true
regex.workspace = true
once_cell.workspace = true
notify = "7.0"

[dev-dependencies]
proptest.workspace = true
proptest-state-machine.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
