[package]
name = "holon-prql-render"
version = "0.1.0"
edition = "2021"

[dependencies]
prqlc.workspace = true
prqlc-parser.workspace = true
serde.workspace = true
serde_json.workspace = true
indexmap.workspace = true
thiserror.workspace = true
anyhow.workspace = true
regex.workspace = true
chrono.workspace = true
holon-api.workspace = true

[dev-dependencies]
