[package]
name = "holon-todoist"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
tokio = { workspace = true, features = ["sync", "rt"] }
tokio-stream.workspace = true
futures.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
tracing-opentelemetry.workspace = true
ferrous-di.workspace = true

# Local dependencies
holon.workspace = true
holon-macros.workspace = true
holon-api.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { workspace = true, features = ["default-tls"] }

# Use rustls instead of OpenSSL for Android (OpenSSL requires native compilation)
[target.'cfg(target_os = "android")'.dependencies]
reqwest = { workspace = true, features = ["rustls-tls"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest.workspace = true

[dev-dependencies]
proptest.workspace = true
proptest-state-machine.workspace = true
holon-prql-render.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[features]
integration-tests = []
