[package]
name = "holon-waterui"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
# WaterUI framework
waterui = { git = "https://github.com/water-rs/waterui.git", branch = "dev" }
waterui-ffi = { git = "https://github.com/water-rs/waterui.git", branch = "dev" }

# Holon dependencies
holon-api = { path = "../../crates/holon-api" }
holon = { path = "../../crates/holon" }
holon-core = { path = "../../crates/holon-core" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", default-features = false, features = ["rt", "sync"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# UUID for entity IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Tracing for debugging
tracing = "0.1"
