[package]
name = "rust_lib_holon"
version = "0.1.0"
edition = "2021"
resolver = "2"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1"
chrono = "0.4"
flutter_rust_bridge = { version = "=2.11.1" }
once_cell = "1.20"
holon-prql-render = { path = "../../../crates/holon-prql-render" }
holon = { path = "../../../crates/holon" }
holon-frontend = { path = "../../../crates/holon-frontend" }
holon-todoist = { path = "../../../crates/holon-todoist" }
holon-orgmode = { path = "../../../crates/holon-orgmode", features = ["di"] }
holon-api = { path = "../../../crates/holon-api" }
# Disable async feature for ferrous-di to avoid tokio/rt-multi-thread on WASM
ferrous-di = { path = "/Users/martin/Workspaces/rust/ferrous-di", default-features = false }
serde = "1.0.228"
serde_json = "1.0"
thiserror = "2.0"
tokio-stream = "0.1"
tokio-util = "0.7"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
opentelemetry = { version = "0.31", features = ["logs"] }
opentelemetry_sdk = { version = "0.31", features = ["experimental_async_runtime", "rt-tokio", "logs"] }
opentelemetry-otlp = { version = "0.31", features = ["tonic", "logs"] }
opentelemetry-stdout = "0.31"
tracing-opentelemetry = "0.32"
opentelemetry-appender-tracing = "0.31"
uuid = { version = "1.11", features = ["v4"] }
# Dependencies needed for generated code (low-level types)
#prqlc = { git = "https://github.com/nightscape/prql", branch = "fix-union-lineage", package = "prqlc" }
prqlc = { path = "/Users/martin/Workspaces/bigdata/prql/prqlc/prqlc" }
prqlc-parser = { path = "/Users/martin/Workspaces/bigdata/prql/prqlc/prqlc-parser" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["full"] }
holon-mcp = { path = "../../mcp" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1", features = ["sync", "macros", "rt", "time"] }
getrandom = { version = "0.3", features = ["wasm_js"] }

# Patch rustix to use Android-compatible fork
# The official rustix 1.1.2 has io_uring code that doesn't compile on Android
# This fork has fixes for Android: https://github.com/HemantKArya/rustix-android-patch
[patch.crates-io]
rustix = { git = "https://github.com/HemantKArya/rustix-android-patch", branch = "main" }
# Use vendored OpenSSL for Android - builds OpenSSL from source instead of requiring system OpenSSL
# This is needed because iroh and its dependencies pull in OpenSSL
[target.'cfg(target_os = "android")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

# Release profile optimizations to reduce __eh_frame section size
# This helps avoid the "ld: warning: __eh_frame section too large" warning
# on macOS when using Flutter-Rust-Bridge with large Rust codebases
[profile.release]
# Disable debug symbols in release builds to reduce __eh_frame size
debug = false
# Enable link-time optimization for smaller binaries
lto = "thin"
# Optimize for size while maintaining performance
opt-level = 3
# Strip symbols to further reduce binary size
strip = true

# Coverage profile for runtime code coverage collection
# This profile enables LLVM source-based coverage instrumentation
# Usage: cargo build --profile coverage
[profile.coverage]
inherits = "dev"
debug = true
# Coverage instrumentation is enabled via RUSTFLAGS environment variable
# See scripts/run-with-coverage.sh for usage
